<resources>
    <string name="app_name">Brian Taylor Soundboard</string>
    <string name="button_a_little_sneaky_one">A Little Sneaky One</string>
    <string name="button_absolutely">Absolutely</string>
    <string name="button_adelaide_players">Adelaide Players</string>
    <string name="button_all_time_low">All Time Low</string>
    <string name="button_bang">Bang!</string>
    <string name="button_big_bender">Big Bender</string>
    <string name="button_big_boy_mcevoy">Big Boy McEvoy</string>
    <string name="button_bouncer_of_all_bounces">Bouncer Of All Bounces</string>
    <string name="button_boy_oh_boy">Boy Oh Boy</string>
    <string name="button_dale_thomas">Dale Thomas</string>
    <string name="button_exciting_finish">Exciting Finish</string>
    <string name="button_giant_clam">Giant Clam</string>
    <string name="button_good_point">Good Point</string>
    <string name="button_great_stuff">Great Stuff</string>
    <string name="button_has_he_got_the_journey">Has He Got The Journey?</string>
    <string name="button_i_think_its_out_of_bounds">I Think It\'s Out Of Bounds</string>
    <string name="button_impossible_bender">Impossible Bender</string>
    <string name="button_iron_man">Iron Man</string>
    <string name="button_it_cant_be">It Can\'t Be</string>
    <string name="button_it_cant_be_possible">It Can\'t Be Possible</string>
    <string name="button_mealtime">Mealtime</string>
    <string name="button_oh_boy_wowee">Oh Boy Wowee</string>
    <string name="button_oh_no">Oh No</string>
    <string name="button_orazio_fantasia_1">Orazio Fantasia 1</string>
    <string name="button_orazio_fantasia_2">Orazio Fantasia 2</string>
    <string name="button_orazio_fantasia_3">Orazio Fantasia 3</string>
    <string name="button_orazio_fantasia_4">Orazio Fantasia 4</string>
    <string name="button_orazio_fantasia_5">Orazio Fantasia 5</string>
    <string name="button_orazio_fantasia_6">Orazio Fantasia 6</string>
    <string name="button_orazio_fantasia_7">Orazio Fantasia 7</string>
    <string name="button_orazio_fantasia_8">Orazio Fantasia 8</string>
    <string name="button_orazio_fantasia_9">Orazio Fantasia 9</string>
    <string name="button_orazio_fantasia_10">Orazio Fantasia 10</string>
    <string name="button_orazio_fantasia_11">Orazio Fantasia 11</string>
    <string name="button_orazio_fantasia_12">Orazio Fantasia 12</string>
    <string name="button_orazio_fantasia_13">Orazio Fantasia 13</string>
    <string name="button_out_of_bounds">Out Of Bounds</string>
    <string name="button_puopolo">Puopolo</string>
    <string name="button_stringer_launches_a_missile">Stringer Launches A Missile</string>
    <string name="button_that_is_unbelievable">That Is Unbelievable</string>
    <string name="button_the_package">The Package</string>
    <string name="button_two_big_teams">Two Big Teams</string>
    <string name="button_wellinghaaaaaam">Wellinghaaaaaam!</string>
    <string name="button_what_a_beauty">What A Beauty</string>
    <string name="button_wowee_dustin">Wowee Dustin</string>
</resources>
