<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ft.briantaylorsoundboard.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnMealtime"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_mealtime"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnItCantBe" />

        <Button
            android:id="@+id/btnItCantBe"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_it_cant_be"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnImpossibleBender" />

        <Button
            android:id="@+id/btnImpossibleBender"
            android:layout_width="122dp"
            android:layout_height="60dp"
            android:layout_marginTop="28dp"
            android:text="@string/button_impossible_bender"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnHasHeGotTheJourney" />

        <Button
            android:id="@+id/btnHasHeGotTheJourney"
            style="@android:style/Widget.Holo.Button.Small"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_has_he_got_the_journey"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnGoodPoint" />

        <Button
            android:id="@+id/btnBoyOhBoy"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_boy_oh_boy"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnBigBoyMcEvoy" />

        <Button
            android:id="@+id/btnBang"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_bang"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnAdelaidePlayers" />

        <Button
            android:id="@+id/btnAdelaidePlayers"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_adelaide_players"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnALittleSneakyOne" />

        <Button
            android:id="@+id/btnAllTimeLow"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_all_time_low"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnAbsolutely" />

        <Button
            android:id="@+id/btnALittleSneakyOne"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_a_little_sneaky_one"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAbsolutely"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_absolutely"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <Button
            android:id="@+id/btnBigBender"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_big_bender"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnAllTimeLow" />

        <Button
            android:id="@+id/btnBigBoyMcEvoy"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_big_boy_mcevoy"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnBang" />

        <Button
            android:id="@+id/btnBouncerOfAllBounces"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_bouncer_of_all_bounces"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnBigBender" />

        <Button
            android:id="@+id/btnDaleThomas"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_dale_thomas"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnBouncerOfAllBounces" />

        <Button
            android:id="@+id/btnExcitingFinish"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_exciting_finish"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnBoyOhBoy" />

        <Button
            android:id="@+id/btnGiantClam"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_giant_clam"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnDaleThomas" />

        <Button
            android:id="@+id/btnGoodPoint"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_good_point"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnExcitingFinish" />

        <Button
            android:id="@+id/btnGreatStuff"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_great_stuff"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnGiantClam" />

        <Button
            android:id="@+id/btnIThinkItsOutOfBounds"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_i_think_its_out_of_bounds"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnGreatStuff" />

        <Button
            android:id="@+id/btnIronMan"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_iron_man"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnIThinkItsOutOfBounds" />

        <Button
            android:id="@+id/btnItCantBePossible"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_it_cant_be_possible"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnIronMan" />

        <Button
            android:id="@+id/btnOhBoyWowee"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_oh_boy_wowee"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnItCantBePossible" />

        <Button
            android:id="@+id/btnOhNo"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_oh_no"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnMealtime" />

        <Button
            android:id="@+id/btnOutOfBounds"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_out_of_bounds"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnOhBoyWowee" />

        <Button
            android:id="@+id/btnPuopolo"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_puopolo"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnOhNo" />

        <Button
            android:id="@+id/btnStringerLaunchesAMissile"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_stringer_launches_a_missile"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnOutOfBounds" />

        <Button
            android:id="@+id/btnThatIsUnbelievable"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_that_is_unbelievable"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnPuopolo" />

        <Button
            android:id="@+id/btnThePackage"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_the_package"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnStringerLaunchesAMissile" />

        <!-- Below, buttons have been implemented via txt. SO BEWARE -->

        <Button
            android:id="@+id/btnTwoBigTeams"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_two_big_teams"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnThatIsUnbelievable" />

        <Button
            android:id="@+id/btnWellinghaaaaaam"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_wellinghaaaaaam"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnThePackage" />

        <Button
            android:id="@+id/btnWhatABeauty"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_what_a_beauty"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnTwoBigTeams" />

        <Button
            android:id="@+id/btnWoweeDustin"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_wowee_dustin"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnWellinghaaaaaam" />

        <Button
            android:id="@+id/btnOrazioFantasia1"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnWhatABeauty" />

        <Button
            android:id="@+id/btnOrazioFantasia2"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnWoweeDustin" />

        <Button
            android:id="@+id/btnOrazioFantasia3"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_3"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnOrazioFantasia1" />

        <Button
            android:id="@+id/btnOrazioFantasia4"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnOrazioFantasia2" />

        <Button
            android:id="@+id/btnOrazioFantasia5"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_5"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnOrazioFantasia3" />

        <Button
            android:id="@+id/btnOrazioFantasia6"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_6"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnOrazioFantasia4" />

        <Button
            android:id="@+id/btnOrazioFantasia7"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_7"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnOrazioFantasia5" />

        <Button
            android:id="@+id/btnOrazioFantasia8"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_8"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnOrazioFantasia6" />

        <Button
            android:id="@+id/btnOrazioFantasia9"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_9"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnOrazioFantasia7" />

        <Button
            android:id="@+id/btnOrazioFantasia10"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_10"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnOrazioFantasia8" />

        <Button
            android:id="@+id/btnOrazioFantasia11"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_11"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnOrazioFantasia9" />

        <Button
            android:id="@+id/btnOrazioFantasia12"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_12"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnOrazioFantasia10" />

        <Button
            android:id="@+id/btnOrazioFantasia13"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_orazio_fantasia_13"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnOrazioFantasia11" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>